Fix letter spacing for extraBold (#1488)

--- a/src/components/text/_headlines.scss
+++ b/src/components/text/_headlines.scss
@@ -73,6 +73,7 @@ $headlineSizes: (
 
     &--extra-bold {
       font-weight: $fontWeightBlack;
+      letter-spacing: 0;
     }
 
     &--white {
